--- a/packages/webapp-client/src/styles/globals.scss
+++ b/packages/webapp-client/src/styles/globals.scss
@@ -1,10 +1,12 @@
+@use 'variables.scss' as *;
+
 *,
 *::before,
 *::after {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Inter', sans-serif;
+  font-family: $font-main;
 }
 
 a {
