--- a/packages/webapp-client/src/styles/variables.scss
+++ b/packages/webapp-client/src/styles/variables.scss
@@ -1,7 +1,8 @@
 $color-primary: #0032b8;
 $color-secondary: #6a4eff;
 
-$color-white: #fff;
+$color-white: #d1d1d1;
+$color-white-hover: #fff;
 
 $font-main: 'Inter', sans-serif;
 
