feature/LandingContent Layout

--- a/packages/webapp-client/src/styles/variables.scss
+++ b/packages/webapp-client/src/styles/variables.scss
@@ -6,6 +6,8 @@ $color-white-hover: #fff;
 
 $font-main: 'Inter', sans-serif;
 
+$header-height: 6rem;
+
 @mixin breakpoint-sm {
   @media (min-width: 512px) {
     @content;
