--- a/packages/webapp-client/src/styles/exports.module.scss
+++ b/packages/webapp-client/src/styles/exports.module.scss
@@ -6,3 +6,10 @@
   colorWhite: $color-white;
   fontMain: $font-main;
 }
+
+.noSelect {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
