--- a/packages/webapp-client/src/components/LandingContent/LandingContent.module.scss
+++ b/packages/webapp-client/src/components/LandingContent/LandingContent.module.scss
@@ -10,51 +10,51 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  height: calc(150vh - $header-height);
+  height: calc(156vh - $header-height);
   text-align: center;
   color: $color-white;
-  margin-bottom: $header-height;
+  margin-bottom: 8rem;
   @include breakpoint-md {
-    width: 50vw;
+    margin: 0;
+    border-radius: 0;
+    width: 99vw;
+    transform: translateY(0);
   }
-}
+  .text {
+    margin-top: 3rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 12em;
+    width: 80%;
+  }
 
-.text {
-  margin-top: 3rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  height: 12em;
-  width: 80%;
-}
+  .logo {
+    width: 40vh;
+    height: 40vh;
+  }
 
-.logo {
-  width: 40vh;
-  height: 40vh;
-}
+  .logoBox {
+    border-radius: 2em;
+    width: 40vh;
+    height: 55vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 
-.logoBox {
+    background: rgb(2, 50, 183);
+    background: linear-gradient(
+      180deg,
+      rgba(2, 50, 183, 1) 0%,
+      rgba(2, 50, 183, 0.1708029197080292) 81%
+    );
 
-  margin-left: 3em;
-  border-radius: 1em 0 0 1em;
-  width: 40vh;
-  height: 50vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
-  background: rgb(2, 50, 183);
-  background: linear-gradient(
-    180deg,
-    rgba(2, 50, 183, 1) 0%,
-    rgba(2, 50, 183, 0.1708029197080292) 81%
-  );
-
-  .schoolLogo {
-    filter: brightness(0) invert(1);
-    width: 20vh;
-    height: 20vh;
+    .schoolLogo {
+      filter: brightness(0) invert(1);
+      width: 20vh;
+      height: 20vh;
+    }
   }
 }
