add breakpoints for desktop header overlap spacer

--- a/packages/webapp-client/src/components/OverlapSpacer/OverlapSpacer.module.scss
+++ b/packages/webapp-client/src/components/OverlapSpacer/OverlapSpacer.module.scss
@@ -5,8 +5,14 @@ $overlap-height: 5em;
 .spacer {
   height: $overlap-height;
   background-color: $color-primary;
+  @include breakpoint-md {
+    display: none;
+  }
 }
 
 .content {
   transform: translateY(-$overlap-height);
+  @include breakpoint-md {
+    transform: translateY(0);
+  }
 }
