--- a/packages/webapp-client/src/styles/variables.scss
+++ b/packages/webapp-client/src/styles/variables.scss
@@ -2,6 +2,7 @@ $color-primary: #0032b8;
 $color-secondary: #6a4eff;
 
 $color-dark: #1a1a1a;
+$color-charcoal: #2a2a2a;
 
 $color-white: #d1d1d1;
 $color-white-hover: #fff;
