scaffold basic layout for dashboard page

--- a/packages/webapp-client/src/components/Footer/Footer.module.scss
+++ b/packages/webapp-client/src/components/Footer/Footer.module.scss
@@ -16,7 +16,7 @@
   color: $color-white;
 
   width: 100vw;
-  height: $header-height;
+  height: $footer-height;
 
   font-size: 3rem;
   position: fixed;
