--- a/packages/webapp-client/src/components/ErrorLog/ErrorLog.module.scss
+++ b/packages/webapp-client/src/components/ErrorLog/ErrorLog.module.scss
@@ -1,13 +1,41 @@
 @use '../../styles/variables' as *;
 
+.spacer {
+  width: calc(100vw - 2rem);
+  background-color: $color-dark;
+  border-radius: 1em;
+  margin-left: 1rem;
+
+  @include breakpoint-md {
+    // padding: 2rem 1rem;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
+
 .container {
   width: 100%;
-  height: 100%;
+  height: calc(100vh - $header-height - $footer-height - 2rem);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  // background-color: $color-charcoal;
-  background-color: white;
+  background-color: $color-charcoal;
   border-radius: 0.5rem;
+
+  overflow-y: scroll;
+  overflow-x: hidden;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none;
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
+  @include breakpoint-md {
+    width: 100%;
+    height: 100%;
+    // flex-direction: row;
+    // padding: 2rem;
+  }
 }
