--- a/packages/webapp-client/src/components/ErrorLog/ErrorLog.module.scss
+++ b/packages/webapp-client/src/components/ErrorLog/ErrorLog.module.scss
@@ -16,13 +16,15 @@
 
 .container {
   width: 100%;
-  height: calc(100vh - $header-height - $footer-height - 2rem);
+  height: calc(100vh - $header-height - $footer-height);
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-start;
+  justify-content: flex-start;
+  gap: 0.75rem;
   background-color: $color-charcoal;
-  border-radius: 0.5rem;
+  border-radius: 0.5rem 0.5rem 0 0;
+  padding: 1em;
 
   overflow-y: scroll;
   overflow-x: hidden;
@@ -35,6 +37,7 @@
   @include breakpoint-md {
     width: 100%;
     height: 100%;
+    border-radius: 0.5rem;
     // flex-direction: row;
     // padding: 2rem;
   }
