--- a/packages/webapp-client/src/components/Header/Header.module.scss
+++ b/packages/webapp-client/src/components/Header/Header.module.scss
@@ -1,36 +1,40 @@
 @use '../../styles/variables' as *;
 
-$header-height: 6rem;
-
 .spacer {
   height: $header-height;
+  background-color: $color-primary;
 }
 
 .header {
-  height: $header-height;
   position: fixed;
+  background-color: $color-primary;
+  height: $header-height;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 100vw;
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  padding: 0.5rem;
-  background-color: $color-primary;
   color: $color-white;
+  padding: 0.7em;
+  z-index: 1;
+}
+
+.corner {
+  display: flex;
+  align-items: center;
 }
 
 .contents {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 100%;
+  width: 100vw;
   max-width: 120rem;
   margin: 0 auto;
 }
 
 .signin {
-  display: none;
+  min-width: 0em;
   @include breakpoint-md {
     display: block;
     min-width: 8rem;
@@ -39,7 +43,6 @@ $header-height: 6rem;
 }
 
 .divider {
-  display: none;
   @include breakpoint-md {
     display: block;
     width: 1px;
@@ -50,8 +53,9 @@ $header-height: 6rem;
 }
 
 .toggle {
-  display: none;
+  margin-left: 2rem;
   @include breakpoint-md {
+    margin-left: 0rem;
     display: block;
     padding-inline: 1rem;
   }
