--- a/packages/webapp-client/src/components/LandingContent/LandingContent.module.scss
+++ b/packages/webapp-client/src/components/LandingContent/LandingContent.module.scss
@@ -15,13 +15,11 @@
   margin-bottom: 8rem;
   @include breakpoint-md {
     margin: 0;
+    justify-content: space-evenly;
     border-radius: 0;
-    width: 99vw;
-    height: calc(95vh - $header-height - $header-height);
+    width: 50vw;
+    height: calc(95vh - $header-height);
     transform: translateY(0);
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    place-items: center;
   }
   .text {
     margin-top: 3rem;
@@ -31,11 +29,32 @@
     align-items: center;
     height: 12em;
     width: 80%;
+    @include breakpoint-md {
+      .title {
+        font-size: 3rem;
+      }
+      margin-top: 0;
+      height: 15em;
+    }
+    p {
+      display: hidden;
+      @include breakpoint-md {
+        display: block;
+      }
+    }
   }
 
   .logo {
     width: 40vh;
     height: 40vh;
+    margin-bottom: 8em;
+    @include breakpoint-md {
+      height: 50vh;
+      width: 50vh;
+      position: absolute;
+      right: -35vw;
+      top: 7vh;
+    }
   }
 
   .logoBox {
@@ -54,14 +73,14 @@
       rgba(2, 50, 183, 0.1708029197080292) 81%
     );
 
-    h3{
-        font-size: 2rem;
+    h3 {
+      font-size: 2rem;
     }
     @include breakpoint-md {
       width: 45vh;
       height: 30vh;
     }
-    .schools{
+    .schools {
       display: flex;
       flex-direction: column;
       @include breakpoint-md {
@@ -75,6 +94,13 @@
       @include breakpoint-md {
         width: 10vh;
         height: 10vh;
+        transition: 500ms;
+        cursor: pointer;
+      }
+    }
+    .schoolLogo:hover {
+      @include breakpoint-md {
+        filter: brightness(0) invert(1) drop-shadow(0px 0px 19px #2482ff);
       }
     }
   }
