--- a/packages/webapp-client/src/components/Footer/Footer.module.scss
+++ b/packages/webapp-client/src/components/Footer/Footer.module.scss
@@ -8,7 +8,7 @@
     rgba(2, 50, 183, 1) 0%,
     rgba(0, 25, 144, 1) 81%
   );
-
+  width: 100%;
   display: flex;
   justify-content: space-evenly;
 
@@ -36,11 +36,59 @@
       font-size: 1rem;
     }
   }
+  .desktop {
+    display: none;
+  }
   @include breakpoint-md {
-    height: 7em;
-    position: static;
+    height: 17em;
+    position: relative;
     .link {
       display: none;
+    }
+    .desktop {
+      width: 100%;
+      height: 90%;
+      position: absolute;
+      bottom: 0;
+      display: flex;
+      img {
+        border-radius: 50%;
+        width: 25vh;
+      }
+      a {
+        font-size: 0.35em;
+      }
+      p {
+        font-size: 0.35em;
+      }
+      .teamLinks {
+        width: 100%;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-wrap: wrap;
+        .teamLink {
+          padding: 0.5em 0;
+          background-color: rgba(154, 208, 255, 0.147);
+          box-shadow: 10px 10px 23px -3px rgba(0, 0, 0, 0.75);
+          -webkit-box-shadow: 10px 10px 23px -3px rgba(0, 0, 0, 0.75);
+          -moz-box-shadow: 10px 10px 23px -3px rgba(0, 0, 0, 0.75);
+          border-radius: 1em;
+          width: 25vw;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          a {
+            transition: 200ms;
+          }
+          a:hover {
+            color: #ffffff;
+            text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff,
+              0 0 20px blue, 0 0 30px blue, 0 0 40px blue,
+              0 0 55px blue, 0 0 75px blue;
+          }
+        }
+      }
     }
   }
 }
