--- a/packages/webapp-client/src/components/Footer/Footer.module.scss
+++ b/packages/webapp-client/src/components/Footer/Footer.module.scss
@@ -14,7 +14,7 @@
 
   color: $color-white;
 
-  width: 100vw;
+  width: 99vw;
   height: $footer-height;
 
   font-size: 3rem;
@@ -46,8 +46,8 @@
       display: none;
     }
     .desktop {
-      width: 100%;
-      height: 90%;
+      width: 99%;
+      height: 100%;
       position: absolute;
       bottom: 0;
       display: flex;
@@ -74,7 +74,7 @@
           -webkit-box-shadow: 10px 10px 23px -3px rgba(0, 0, 0, 0.75);
           -moz-box-shadow: 10px 10px 23px -3px rgba(0, 0, 0, 0.75);
           border-radius: 1em;
-          width: 25vw;
+          width: 27vw;
           display: flex;
           flex-direction: column;
           align-items: center;
@@ -84,8 +84,8 @@
           a:hover {
             color: #ffffff;
             text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff,
-              0 0 20px blue, 0 0 30px blue, 0 0 40px blue,
-              0 0 55px blue, 0 0 75px blue;
+              0 0 20px blue, 0 0 30px blue, 0 0 40px blue, 0 0 55px blue,
+              0 0 75px blue;
           }
         }
       }
