--- a/packages/webapp-client/src/components/ClusterManagementContent/CluterManagement.module.scss
+++ b/packages/webapp-client/src/components/ClusterManagementContent/CluterManagement.module.scss
@@ -1,5 +1,42 @@
+@use '@/styles/variables.scss' as *;
+
 .ClusterManagement {
   height: 300vh;
+}
+.extraBlue {
+  position: absolute;
+  width: 390px;
+  height: 188.85px;
+
+  background: #0032b8;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
+}
+.header {
+  position: relative;
+  width: 131.64px;
+  height: 38px;
+  left: 20px;
+  right: 0.02px;
+
+  /* Primary/Base */
+  background: #6b4eff;
+  border-radius: 8px;
+}
+.backgroundBlack {
+  //position: absolute;
+  width: 345px;
+  height: 287.34px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 15px;
+
+  /* Ink/Darker
+
+Dark background
+*/
+  background-color: $color-dark;
+  border-radius: 9px;
 }
 .card {
   height: 106px;
@@ -16,7 +53,7 @@
   background-color: #404446;
 }
 
-.date {
+.issueDate {
   font-family: Mulish;
   font-size: 11px;
   font-weight: 700;
@@ -26,8 +63,7 @@
 }
 
 .active {
-  position: absolute;
-  left: 0px;
+  left: 100px;
   right: 0.02px;
   top: 0px;
   bottom: 0px;
