wire up errors and clusters to backend

--- a/packages/webapp-client/src/components/ErrorLog/ErrorLog.module.scss
+++ b/packages/webapp-client/src/components/ErrorLog/ErrorLog.module.scss
@@ -42,3 +42,12 @@
     // padding: 2rem;
   }
 }
+
+.loading {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
