--- a/packages/webapp-client/src/components/TeamLink/TeamLink.module.scss
+++ b/packages/webapp-client/src/components/TeamLink/TeamLink.module.scss
@@ -13,16 +13,22 @@
   a {
     transition: 200ms;
   }
+  h2 {
+    font-size: 1rem;
+    font-weight: 600;
+    padding-block: 0.5rem;
+  }
   a:hover {
     color: #ffffff;
     text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px blue,
       0 0 30px blue, 0 0 40px blue, 0 0 55px blue, 0 0 75px blue;
   }
-  .Link{
-    padding: 0 1em;
-    a{
-      padding: 1em;
-    }
+  .Link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-block: 0.5rem;
+    gap: 0.5em;
   }
 }
 .teamLink:hover {
