--- a/packages/webapp-client/src/components/Header/Header.module.scss
+++ b/packages/webapp-client/src/components/Header/Header.module.scss
@@ -7,7 +7,6 @@
 
 .header {
   position: fixed;
-  background-color: $color-primary;
   height: $header-height;
   top: 0;
   left: 0;
@@ -15,26 +14,34 @@
   display: flex;
   align-items: center;
   color: $color-white;
-  padding: 0.7em;
-  z-index: 1;
+  @include restrict-width;
+  z-index: 4;
 }
 
 .corner {
   display: flex;
   align-items: center;
+  display: none;
+  @include breakpoint-md {
+    display: block;
+  }
 }
 
 .contents {
   display: flex;
+  background-color: #e1e1e1;
+
   align-items: center;
   justify-content: space-between;
-  width: 100vw;
-  max-width: 120rem;
-  margin: 0 auto;
+  padding: 0.7em;
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
 
 .signin {
   min-width: 0em;
+  display: none;
   @include breakpoint-md {
     display: block;
     // min-width: 8rem;
