--- a/packages/webapp-client/src/components/Logo/Logo.module.scss
+++ b/packages/webapp-client/src/components/Logo/Logo.module.scss
@@ -4,10 +4,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  color: black;
   gap: 0.75rem;
   height: 100%;
   font-size: large;
-  filter: drop-shadow(0 0 0.5rem rgba(0, 0, 0, 0.5));
+  // filter: drop-shadow(0 0 0.5rem rgba(0, 0, 0, 0.5));
 }
 
 .text {
