--- a/packages/webapp-client/src/components/Logo/Logo.module.scss
+++ b/packages/webapp-client/src/components/Logo/Logo.module.scss
@@ -7,13 +7,13 @@
   color: black;
   gap: 0.75rem;
   height: 100%;
-  font-size: large;
   // filter: drop-shadow(0 0 0.5rem rgba(0, 0, 0, 0.5));
 }
 
 .text {
   font-weight: bold;
-  font-size: large;
+  font-size: 26px;
+
   display: none;
 
   @include breakpoint-sm {
