--- a/packages/webapp-client/src/components/LandingContent/LandingContent.module.scss
+++ b/packages/webapp-client/src/components/LandingContent/LandingContent.module.scss
@@ -1,130 +1,26 @@
 @use '@/styles/variables.scss' as *;
-.Landing {
+
+.layout {
+  display: grid;
+  grid-template-columns: auto;
+  padding-block: 2rem;
   @include breakpoint-md {
-    background: linear-gradient(130deg, #ad90c1 0%, rgb(3, 0, 84) 100%),
-      linear-gradient(130deg, #09007b 0%, rgba(15, 0, 66, 0) 30%),
-      linear-gradient(129.96deg, rgb(255, 47, 47) 10.43%, rgb(0, 4, 96) 92.78%),
-      radial-gradient(
-        100% 246.94% at 100% 0%,
-        rgb(255, 255, 255) 0%,
-        rgba(37, 0, 66, 0.8) 100%
-      ),
-      linear-gradient(121.18deg, rgb(11, 0, 134) 0.45%, rgb(27, 0, 62) 100%),
-      linear-gradient(154.03deg, rgb(206, 0, 0) 0%, rgb(255, 0, 61) 74.04%),
-      linear-gradient(341.1deg, rgb(178, 91, 186) 7.52%, rgb(16, 0, 119) 77.98%),
-      linear-gradient(222.34deg, rgb(169, 0, 0) 12.99%, rgb(0, 255, 224) 87.21%),
-      linear-gradient(
-        150.76deg,
-        rgb(183, 213, 0) 15.35%,
-        rgb(34, 0, 170) 89.57%
-      );
-    background-blend-mode: overlay, normal, overlay, color-burn, screen, overlay,
-      difference, difference, normal;
+    gap: 2rem;
+    padding-block: 4rem;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
   }
-}
-.LandingContent {
-  background-color: $color-dark;
-  border-radius: 1em;
-  width: calc(100vw - 2rem);
-  margin-left: 1rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  height: calc(156vh - $header-height);
-  text-align: center;
-  color: $color-white;
-  margin-bottom: 8rem;
-  @include breakpoint-md {
-    background-color: transparent;
-    margin: 0;
-    justify-content: space-evenly;
-    border-radius: 0;
-    width: 50vw;
-    height: 90vh;
-    transform: translateY(0);
-  }
-  .text {
-    margin-top: 3rem;
+
+  & > div {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
-    height: 12em;
-    width: 80%;
-    @include breakpoint-md {
-      .title {
-        font-size: 3rem;
-      }
-      margin-top: 0;
-      height: 15em;
-    }
-    p {
-      display: hidden;
-      @include breakpoint-md {
-        display: block;
-      }
-    }
   }
 
-  .logo {
-    width: 40vh;
-    height: 40vh;
-    margin-bottom: 8em;
-    @include breakpoint-md {
-      width: 60vh;
-      height: 60vh;
-      position: absolute;
-      right: -40vw;
-      top: 15vh;
-    }
-  }
-
-  .logoBox {
-    border-radius: 2em;
-    width: 40vh;
-    height: 55vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-
-    background: rgb(2, 50, 183);
-    background: linear-gradient(
-      180deg,
-      rgba(2, 50, 183, 1) 0%,
-      rgba(2, 50, 183, 0.1708029197080292) 81%
-    );
-
-    h3 {
-      font-size: 2rem;
-    }
-    @include breakpoint-md {
-      width: 55vh;
-      height: 40vh;
-    }
-    .schools {
-      display: flex;
-      flex-direction: column;
-      @include breakpoint-md {
-        flex-direction: row;
-      }
-    }
-    .schoolLogo {
-      filter: brightness(0) invert(1);
-      width: 20vh;
-      height: 20vh;
-      @include breakpoint-md {
-        width: 20vh;
-        height: 20vh;
-        transition: 500ms;
-        cursor: pointer;
-      }
-    }
-    .schoolLogo:hover {
-      @include breakpoint-md {
-        filter: brightness(0) invert(1) drop-shadow(0px 0px 19px #2482ff);
-      }
-    }
+  img {
+    aspect-ratio: 1;
+    max-width: 100%;
+    object-fit: contain;
   }
 }
