--- a/packages/webapp-client/src/components/Navigation/Navigation.module.scss
+++ b/packages/webapp-client/src/components/Navigation/Navigation.module.scss
@@ -61,6 +61,7 @@
   transition: transform 0.2s ease-in-out;
   top: $header-height;
   z-index: -1;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
   a {
     width: 100%;
   }
