more frontend refactor

--- a/packages/webapp-client/src/components/LandingContent/LandingContent.module.scss
+++ b/packages/webapp-client/src/components/LandingContent/LandingContent.module.scss
@@ -4,6 +4,7 @@
   display: grid;
   grid-template-columns: auto;
   padding-block: 2rem;
+  @include restrict-width;
   @include breakpoint-md {
     gap: 2rem;
     padding-block: 4rem;
