--- a/packages/webapp-client/src/components/Header/Header.module.scss
+++ b/packages/webapp-client/src/components/Header/Header.module.scss
@@ -2,19 +2,20 @@
 
 .spacer {
   height: $header-height;
-  background-color: $color-primary;
 }
 
 .header {
   position: fixed;
   height: $header-height;
+  background-color: #e1e1e1;
   top: 0;
   left: 0;
   width: 100vw;
   display: flex;
   align-items: center;
+  justify-content: center;
   color: $color-white;
-  @include restrict-width;
+
   z-index: 4;
 }
 
@@ -34,7 +35,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 0.7em;
-  width: 100%;
+  @include restrict-width;
   height: 100%;
   position: relative;
 }
