--- a/packages/webapp-client/src/styles/variables.scss
+++ b/packages/webapp-client/src/styles/variables.scss
@@ -34,3 +34,25 @@ $footer-height: 6rem;
   width: min(100%, 90rem);
   margin: 0 auto;
 }
+
+@mixin hide-scrollbar {
+  .example::-webkit-scrollbar {
+    display: none;
+  }
+
+  .example {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+}
+
+@mixin show-scrollbar {
+  .example::-webkit-scrollbar {
+    display: block;
+  }
+
+  .example {
+    -ms-overflow-style: auto;
+    scrollbar-width: auto;
+  }
+}
