--- a/packages/webapp-client/src/components/ClusterCreateForm/ClusterCreateForm.module.scss
+++ b/packages/webapp-client/src/components/ClusterCreateForm/ClusterCreateForm.module.scss
@@ -1,7 +1,7 @@
 @use '../../styles/variables.scss' as *;
 
 .container {
-  background-color: lighten($color-dark, 10%);
+  // background-color: lighten($color-dark, 10%);
   height: 100%;
   width: 100%;
   padding: 2rem;
@@ -9,5 +9,5 @@
   flex-direction: column;
   align-items: center;
   gap: 1rem;
-  color: white;
+  color: black;
 }
