--- a/packages/webapp-client/src/components/ErrorLog/ErrorLog.module.scss
+++ b/packages/webapp-client/src/components/ErrorLog/ErrorLog.module.scss
@@ -1,32 +1,31 @@
 @use '../../styles/variables' as *;
 
 .spacer {
-  width: calc(100vw - 2rem);
-  background-color: $color-dark;
-  border-radius: 1em;
-  margin-left: 1rem;
+  // width: calc(100vw - 2rem);
+  // border-radius: 1em;
+  // margin-left: 1rem;
 
-  @include breakpoint-md {
-    // padding: 2rem 1rem;
-    margin: 0;
-    width: 100%;
-    height: 100%;
-  }
+  // @include breakpoint-md {
+  //   // padding: 2rem 1rem;
+  //   margin: 0;
+  //   width: 100%;
+  //   height: 100%;
+  // }
 }
 
 .container {
   width: 100%;
-  height: calc(100vh - $header-height - $footer-height);
+  // height: calc(100vh - $header-height - $footer-height);
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
   gap: 0.75rem;
-  background-color: $color-charcoal;
   border-radius: 0.5rem 0.5rem 0 0;
-  padding: 1em;
 
-  overflow-y: scroll;
+  color: black;
+
+  // overflow-y: scroll;
   overflow-x: hidden;
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none;
