--- a/packages/webapp-client/src/styles/variables.scss
+++ b/packages/webapp-client/src/styles/variables.scss
@@ -33,6 +33,10 @@ $footer-height: 6rem;
 @mixin restrict-width {
   width: min(100%, 90rem);
   margin: 0 auto;
+  padding-inline: 1rem;
+  @include breakpoint-md {
+    padding-inline: 2rem;
+  }
 }
 
 @mixin hide-scrollbar {
